--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
-
+<!Doctype html>
+<html>
+  <head>
+    <script src = "index.js"></script>
+    <script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  </head>
+  <body>
+    
 <input id = "email">
 <input id = "password" type = "password">
 <input id = "show1" type = "checkbox">
@@ -8,3 +15,5 @@
 <button id = "register"> Register </button>
 <button id = "reset"> Reset </button>
 <h3 id = "status"> <h3>
+  </body>
+</html>
