--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
     <script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
-    
-<input id = "email">
-<input id = "password" type = "password">
-<input id = "show1" type = "checkbox">
-<input id = "password2" type = "password">
-<input id = "show2" type = "checkbox" value = "1">
-<button id = "loginemail">Login</button>
-<button id = "register"> Register </button>
-<button id = "reset"> Reset </button>
-<h3 id = "status"> <h3>
+    <h1> FireBase Demo </h1>
+    <label for = "#email"> email </label>
+    <input id = "email"><br>
+    <label for = "#password"> password</label>
+    <input id = "password" type = "password">
+    <input id = "show1" type = "checkbox"><br>
+    <label for = "#password2"> re-type password </label>
+    <input id = "password2" type = "password">
+    <input id = "show2" type = "checkbox"><br>
+    <button id = "loginemail">Login</button>
+    <button id = "register"> Register </button>
+    <button id = "reset"> Reset </button>
+    <h3 id = "status"> <h3>
   </body>
 </html>
