--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <script src = "index.js"></script>
     <script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src = "https://www.gstatic.com/firebasejs/7.21.0/firebase-auth.js"></script>
+    <script src = "https://www.gstatic.com/firebasejs/7.21.0/firebase-app.js"></script>
   </head>
   <body>
     <h1> FireBase Demo </h1>
