--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <input id = "show1" type = "checkbox"><br>
     <label for = "#password2"> re-type password </label>
     <input id = "password2" type = "password">
-    <input id = "show2" type = "checkbox"><br>
+    <input id = "show2" type = "checkbox">
+    <span id = "status"> <span><br>
     <button id = "loginemail">Login</button>
     <button id = "register"> Register </button>
     <button id = "reset"> Reset </button>
-    <h3 id = "status"> <h3>
   </body>
 </html>
