--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <label for = "#password2"> re-type password </label>
   <input id = "password2" type = "password">
   <input id = "show2" type = "checkbox">
-  <span id = "status"> <span><br>
+  <span id = "status"> </span><br>
   <button id = "loginemail">Login</button>
   <button id = "register"> Register </button>
   <button id = "reset"> Reset </button>
