--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
   <input id = "email"><br>
   <label for = "#password"> password</label>
   <input id = "password" type = "password">
-  <input id = "show1" type = "checkbox"><br>
+  <input id = "show1" type = "checkbox">
+  <label for = "#show1">show password</label><br>
   <label for = "#password2"> re-type password </label>
   <input id = "password2" type = "password">
   <input id = "show2" type = "checkbox">
+  <label for = "#show2">show password</label>
   <span id = "status"> </span><br>
   <button id = "loginemail">Login</button>
   <button id = "register"> Register </button>
