--- a/index.html
+++ b/index.html
@@ -2,24 +2,16 @@
 <head>
   <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src = "https://www.gstatic.com/firebasejs/7.21.0/firebase-app.js"></script>
-  <script src = "https://www.gstatic.com/firebasejs/7.21.0/firebase-auth.js"></script>
+  <script src = "https://www.gstatic.com/firebasejs/7.21.0/firebase-database.js"></script>
   <script src = "index.js"></script>
 </head>
 <body>
-  <h1> FireBase Demo </h1>
-  <label for = "#email"> email </label>
-  <input id = "email"><br>
-  <label for = "#password"> password</label>
-  <input id = "password" type = "password">
-  <input id = "show1" type = "checkbox">
-  <label for = "#show1">show password</label><br>
-  <label for = "#password2"> re-type password </label>
-  <input id = "password2" type = "password">
-  <input id = "show2" type = "checkbox">
-  <label for = "#show2">show password</label>
-  <span id = "status"> </span><br>
-  <button id = "loginemail">Login</button>
-  <button id = "register"> Register </button>
-  <button id = "reset"> Reset </button>
+  <h1 id = status>Game Status</h1>
+<input id = "name">
+<button id = join>Join Game</button>
+<button id = leave>Leave Game</button>
+<div id = "lobby">
+  <h1>Lobby</h1>
+</div>
 </body>
 
