--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src = "https://www.gstatic.com/firebasejs/7.21.0/firebase-app.js"></script>
   <script src = "https://www.gstatic.com/firebasejs/7.21.0/firebase-database.js"></script>
-  <script src = "script.js"></script>
+  <script src = "/script.js"></script>
 </head>
 <body>
   <div id = "game">
