--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <script src = "https://www.gstatic.com/firebasejs/7.21.0/firebase-app.js"></script>
   <script src = "https://www.gstatic.com/firebasejs/7.21.0/firebase-database.js"></script>
   <script src = "script.js"></script>
+  <link rel = "stylesheet" href = "style.css">
 
 </head>
 <body>
